--- a/css/estilos.css
+++ b/css/estilos.css
@@ -48,12 +48,13 @@ section{
     cursor: pointer;
     background: none;
     color:#fdf9e2;
+    border: 1px solid #ff9f32;
 }
 
 .btn:hover{
     background-color:#fdf9e2 ;
-    border: 1px solid #bc815d;
-    color:#bc815d;
+    border: 1px solid #ff9f32;;
+    color:#ff9f32;;
 }
 
 .heading{
@@ -65,7 +66,7 @@ section{
 }
 
 .heading span{
-    color: #bc815d;;
+    color: #ffbc6f;
     text-transform: uppercase;
 }
 
@@ -96,7 +97,7 @@ section{
 }
 
 .header .user p{
-    color: #8d2aff;
+    color: #ffbc6f;
     font-size: 1.5rem;
 }
 
@@ -110,14 +111,14 @@ section{
     padding:.7rem;
     border-radius: 5rem;
     font-size: 2rem;
-    border: 1px solid #bc815d;
+    border: 1px solid #ffbc6f;
     color:var(--black);
 }
 
 .header .navbar a:hover{
-    border: 1px solid #bc815d;
+    border: 1px solid #ffbc6f;
     background-color: rgb(255, 238, 208);
-    color: #bc815d;
+    color: #ff9f32;
 }
 
 #menu-btn{
@@ -180,7 +181,7 @@ section{
 
 .home .content p{
     font-size: 2rem;
-    color: #bc815d;
+    color: #ffbc6f;
     padding-bottom: .5rem;
 }
 
@@ -189,14 +190,14 @@ section{
     top: 10rem;
     border-radius: .5rem;
     padding:1rem;
-    border: 1px solid #bc815d;
+    border: 1px solid #ffbc6f;
 }
 
 .home .share a{
     height: 5rem;
     width: 5rem;
     line-height: 5rem;
-    border: 1px solid #bc815d;
+    border: 1px solid #ffbc6f;
     margin:.5rem;
     font-size: 2rem;
     color: #fdf9e2;
@@ -205,7 +206,7 @@ section{
 
 .home .share a:hover{
     box-shadow: var(--box-shadow-inset);
-    color:#bc815d;
+    color:#ff9f32;;
 }
 
 .about .row{
@@ -359,7 +360,7 @@ section{
     top:0; left: 0;
     height: 100%;
     width: 100%;
-    background: #bc815d;;
+    background: #ff9f32;
     z-index: -1;
     clip-path: circle(9rem at 5% 0%);
     transition: .3s linear;
@@ -375,7 +376,7 @@ section{
 
 .portfolio .box-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(70rem, 1fr));
     gap:2rem;
 }
 
@@ -406,11 +407,12 @@ section{
 
 .portfolio .box-container .box:hover .content{
     transform: scale(1);
+    background-color: #ffbc6f;
 }
 
 .portfolio .box-container .box .content h3{
     font-size: 2.5rem;
-    color:var(--black);
+    color: #fff;
     text-transform: uppercase;
     transform: translateY(-5rem);
     opacity: 0;
@@ -426,7 +428,7 @@ section{
     margin:1rem auto;
     max-width: 70rem;
     border-radius: .5rem;
-    border: 1px solid #bc815d;
+    border: 1px solid #ff9f32;
     padding:2rem;
 }
 
@@ -438,7 +440,7 @@ section{
     font-size: 1.6rem;
     text-transform: none;
     margin:.7rem 0;
-    border: 1px solid #bc815d;
+    border: 1px solid #ff9f32;
     border-radius: .5rem;
 }
 
@@ -448,7 +450,7 @@ section{
 }
 
 .contact form .box:focus{
-    border: 1px solid #bc815d;
+    border: 1px solid #ff9f32;
 }
 
 .credits{
@@ -461,7 +463,7 @@ section{
 }
 
 .credits span{
-    color: #bc815d;
+    color: #ff9f32;
 }
 
 
@@ -518,3 +520,4 @@ section{
     }
 
 }
+
